glx/testdata/invalid/comprehensive-broken-references/vocabularies/person-properties.glx
person_properties:
  name:
    label: "Name"
    description: "Person's name as recorded"
    value_type: string
    temporal: true
    fields:
      given:
        label: "Given Name"
        description: "Given/first name(s)"
      surname:
        label: "Surname"
        description: "Family name"
  birth_place:
    label: "Birth Place"
    value_type: reference
    reference_type: places

